# EVOID

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  showcase.js  sitemap.xml
.github/workflows/: deploy-docs.yml
.mimocode/: .gitignore  mimo.json  package-lock.json  package.json
.mimocode/agents/: build.md  plan.md
.mimocode/commands/: sync-docs.md
.mimocode/glossary/: glossary.md
.mimocode/plans/: 1783992775299-swift-garden.md  PHASES-SUMMARY.md  RFC-0001-EVOID-Runtime.md
_astro/: _..DV7GpS1O.css  bento.DlEyyY2v.css  index.CX34FcKq.css
admin/: index.html
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs-astro/public/: robots.txt
docs/api/: README.md  index.html
docs/examples/: README.md  index.html
docs/guide/: asgi.md  extending.md  fastapi-style.md  installation.md  intent.md  iop-style.md  messaging.md  nestjs-style.md  parallel.md  pipeline.md  plugins.md  processors.md  quick-start.md  telegram.md  websocket.md  what-is-iop.md
docs/learn/: concurrency.md  why-iop.md
docs/tutorial/: PLAN.md  README.md  authentication.md  caching.md  configuration.md  custom-pipelines.md  deployment.md  extending-pipelines.md  first-steps.md  intents-behind-the-scenes.md  intents.md  inter-service.md  iop-style.md  iop-vs-fastapi.md  nestjs-large-projects.md  parallel.md  path-params.md  pipeline.md  plugins.md  processors.md  project-structure.md  request-body.md  response.md  rest-api.md  testing.md
evoid/: __init__.py
evoid/adapters/: __init__.py  asgi.py  cli.py  robyn.py  telegram.py  websocket.py
evoid/config/: __init__.py  deps.py  loader.py  schema.py  sync.py
evoid/contracts/: __init__.py  adapter.py  cache.py  schema.py  serializer.py  storage.py
evoid/core/: __init__.py  annotations.py  context.py  extend.py  intent.py  message_bus.py  parallel.py  pipeline.py  processor.py  resolver.py  routing.py  (+2 more)
evoid_cli/: __init__.py  main.py
scripts/: update_docs.py
tests/: test_core.py  test_msgpack_serializer.py
(+124 files in other folders)
