[project]
name = "evoid"
version = "0.3.3"
description = "EVOID — Reference Runtime for Intent-Oriented Programming"
authors = [
    { name = "EvolveBeyond", email = "pakrohk@gmail.com" }
]
dependencies = [
    "aiosqlite>=0.20.0,<0.21.0",
    "tomli_w>=1.0.0,<2.0.0",
]
requires-python = ">=3.13.1"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["iop", "intent-oriented", "runtime", "evoid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "ruff>=0.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["evoid", "evoid_cli"]

[project.scripts]
evo = "evoid_cli.main:main"

[project.optional-dependencies]
# Pydantic schema engine
pydantic = ["pydantic>=2.0.0,<3.0.0"]
# ASGI adapter
asgi = ["starlette>=0.27.0,<0.40.0", "uvicorn[standard]>=0.24.0,<0.25.0"]
# Robyn adapter
robyn = ["robyn>=0.30.0,<1.0.0"]
# Telegram adapter
telegram = ["aiogram>=3.0.0,<4.0.0"]
# Redis cache
redis = ["redis>=4.0.0,<5.0.0"]
# SQLAlchemy storage
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.0,<3.0.0", "aiosqlite>=0.20.0,<0.21.0"]
# Loguru logger
loguru = ["loguru>=0.7.0,<0.8.0"]
# Full stack
full = ["evoid[pydantic,asgi,redis,sqlalchemy,loguru]"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP"]
ignore = ["E501", "N802", "C901", "UP042"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
multi_line_output = 3
